@@ -11,6 +11,7 @@ require "acts_as_taggable_on/acts_as_taggable_on/collection"
 require "acts_as_taggable_on/acts_as_taggable_on/cache"
 require "acts_as_taggable_on/acts_as_taggable_on/ownership"
 require "acts_as_taggable_on/acts_as_taggable_on/related"
+require "acts_as_taggable_on/acts_as_taggable_on/recommended"
 
 require "acts_as_taggable_on/acts_as_tagger"
 require "acts_as_taggable_on/tag"
