@@ -13,6 +13,8 @@ end
 class OtherTaggableModel < ActiveRecord::Base
   acts_as_taggable_on :tags, :languages
   acts_as_taggable_on :needs, :offerings
+
+  has_one :untaggable_model
 end
 
 class InheritingTaggableModel < TaggableModel
@@ -28,4 +30,5 @@ end
 
 class UntaggableModel < ActiveRecord::Base
   belongs_to :taggable_model
+  belongs_to :other_taggable_model
 end
